# slurm-exporter

./: Dockerfile  README.md  docker-bake.hcl  main.py  pyproject.toml
.github/workflows/: docker.yml
slurm_exporter/: __init__.py  collector.py  main.py  slurm_client.py
